[package]
name = "crypto-bigint-asm"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
description = "Assembly routines for big integers"
rust-version = "1.86"

[dependencies]
crypto-bigint = "0.6"
tracing = "0.1"

[dev-dependencies]
test-log = { version = "0.2.17", features = ["trace"] }
